# mangoloader

./: .dir-locals.el  .gitignore  Cargo.toml  Makefile  README.md  config.example.toml  flake.nix  go.mod  go.sum  main.go  package.nix  todo.org
.direnv/: flake-profile-5-link
cmd/: main.go
internal/config/: config.go
internal/database/: database.go
internal/web/: templates.go
src/: app.rs  main.rs
src/api/: api.rs  manga.rs  mod.rs  routes.rs  web.rs
src/lua/: mod.rs  test.lua
src/scraper/: mod.rs
src/scraper/sources/: comick.rs  mod.rs
static/: base.css  index.css
static/styles/: base.css  index.css
style/: main.scss
templates/: add.html  base.html  index.html
web/: index.html  vite.config.ts
web/src/: App.css  App.tsx  index.css
