[package]
name = "mangoloader"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.19", features = ["derive"] }
hyper = "1.4.1"
reqwest = "0.12.9"
rinja = "0.3.5"
rinja_axum = "0.3.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.0", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# faster rinja builds
[profile.dev.package.rinja_derive]
opt-level = 3
