[package]
name = "mangoloader"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive"] }
hyper = "1.6.0"
reqwest = "0.12.20"
askama = "0.14.0"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# faster rinja builds
[profile.dev.package.askama_derive]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
strip = true
